# tiny-static-web-server

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-debug  README.md  build-immutable-image.sh  build.sh  tests.sh
hooks/: pre_build
src/: create_key.rs  does_client_accept_gzip.rs  does_gz_version_exists.rs  filename_contains_hash.rs  list_files_in_dir_recursively.rs  main.rs  path_to_key.rs
tests/: install-newman.sh  package.json  tests.sh  tiny-static-web-server.postman_collection.json
